@@ -132,14 +132,15 @@ def router(paramstring):
       list_episodes(page, params['show'], params['page'])
     elif params['action'] == 'play':
       page = sendResponse(get_cookie(), params['video'])
-#      with open('main_show_episode.html', 'w') as f:
-#        f.write(page)
-#      hd, sd = scrape.Watch_Episode(page)
-      episode_url = scrape.Watch_Episode(page, params['video'].rsplit('/',1)[1])
-      if episode_url is not None:
-          play_video(episode_url)
+      jw, hd = scrape.Watch_Episode(page, params['video'].rsplit('/',1)[1])
+      dialog = xbmcgui.Dialog()
+      which = dialog.yesno('Select Prefered Stream', 'Which stream would you prefer?',  yeslabel='m3u8 "JW Player"', nolabel='MP4 HD')
+      if which:
+        if hd is not None:
+          play_video(hd)
       else:
-        popup(__language__(30004)) # "Video doesn't exist on website."
+        if jw is not None:
+          play_video(jw)
   else:
     login()
 #    page = sendResponse(get_cookie(), "/live/streams/1260")
