@@ -1,3 +1,5 @@
+[B]3.0.6[/B]
+- Some platforms have problem with JW m3u8 stream, so gave stream choice
 [B]3.0.5[/B]
 - Changed method of playback due to lack of TYT.com website QC.
 [B]3.0.4[/B]
